Feat: Vendor Search
